データベース設定変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,4 +32,5 @@ production:
   host: <%= Rails.application.credentials.db[:endpoint] %>
   pool: 20
   timeout: 1000
+  socket: /var/lib/mysql/mysql.sock
 
