--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
   database: db/test.sqlite3
 
 production:
-  database: test_app_production
+  database: deploy-test_production
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
